test/Fail/Issue4888.agda
open import Agda.Builtin.Bool

impor Agda.Builtin.Nat

import Agda.Builtin.Sigma

module issue4888 where
