test/Fail/Issue4888.err
Issue4888.agda:3.1-23: error: [MissingTypeSignature.Function]
Missing type signature for left hand side impor Agda.Builtin.Nat
when scope checking the declaration
  impor Agda.Builtin.Nat
